--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <center><h2>My Profile</h2></center>
     <table cellspacing="10">
     <tr>
-      <td><img src="/home/usre-7/Desktop/Webdevelopment/htmlpersonalsite/mypicture.jpg" alt="picture" width="80" height="80"></td>
+      <td><img src="mypicture.jpg" alt="picture" width="80" height="80"></td>
       <td><p><strong>Name:</strong>M.Farida</p>
       <p><strong>Designation:</strong>Trainee</p>
       <p><strong>Company:</strong><a href="https://in.linkedin.com/company/credencys">Credencys</a></p>
