--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
           <li><b>Subject:</b>OS</li>
         </ul>
     </ul>
-    <a href="/home/usre-7/Desktop/Webdevelopment/htmlpersonalsite/contactme.html">Contactme</a></li>
+    <a href="contactme.html">Contactme</a></li>
   </body>
 </html>
