--- a/contactme.html
+++ b/contactme.html
@@ -14,6 +14,6 @@
       <p><strong>Address:</strong>2-38,Pothavaram,
       <br>EastGodavari District,<br>AP-533214</p>
       <!--SIGN UP-->
-      <a href="/home/usre-7/Desktop/Webdevelopment/htmlpersonalsite/Registration.html">Contact form</a></p>
+      <a href="Registration.html">Contact form</a></p>
   </body>
 </html>
